# godseye-ex

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: extension_security_top10.md
godseye/: __init__.py  __main__.py  cli.py  models.py
godseye/engine/: aggregate.py  alias_tracker.py  base_module.py  chains.py  context_bridge.py  diff.py  loader.py  logging_config.py  orchestrator.py  snippet.py  string_unpacker.py  taint_tracer.py  tokenizer.py  vendor_detect.py
godseye/modules/: context_leakage_module.py  cors_module.py  crypto_module.py  dynamic_code_module.py  hardening_module.py  injection_module.py  manifest_deception_module.py  manifest_module.py  messaging_module.py  native_bridge_module.py  network_policy_module.py  privacy_module.py  storage_module.py  supply_chain_module.py  tab_injection_module.py  taint_module.py
godseye/report/: html_renderer.py  renderer.py  theatrics.py
sample_extensions/deceptive-manifest/: background.js  content.js
sample_extensions/dvbe-like/: jquery-2.2.4.min.js  popup.js
sample_extensions/dvbe-rce-fixture/: popup.js
sample_extensions/negative-control/: background.js
sample_extensions/risky-notes-v1/: background.js
sample_extensions/risky-notes-v2/: background.js  content.js
sample_extensions/v3-new-module-fixture/: background.js  content.js
tests/: test_godseye.py
