[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "godseye-ex"
version = "1.0.0"
description = "GODSEYE: EX -- Static Extension Analysis Engine"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["rich>=13.0"]

[project.scripts]
godseye-ex = "godseye.cli:run"

[tool.setuptools]
packages = ["godseye", "godseye.engine", "godseye.modules", "godseye.report"]
